fix alignment issues at the top

--- a/src/app/components/admin/tab-sections/users-tab-section/users-tab-section.component.scss
+++ b/src/app/components/admin/tab-sections/users-tab-section/users-tab-section.component.scss
@@ -5,3 +5,9 @@
 th {
   vertical-align: middle;
 }
+
+.form {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
